--- a/templates/scan-results.html
+++ b/templates/scan-results.html
@@ -64,7 +64,7 @@
         </tbody>
     </table>
 
-    <a class="print-button" href="/download">Print Report</a>
+    <a class="print-button" href="/download">Download Report</a>
 
     <script>
         // Retrieve scan results from localStorage
