--- a/templates/service.html
+++ b/templates/service.html
@@ -46,6 +46,11 @@
 					class="option-btn"
 					>Manual Connection</a
 				>
+                                <a
+                                        href="/scan-results"
+                                        class="option-btn"
+                                        >Get Scan Results</a
+                                > 
 				<a
 					href="/coming-soon"
 					class="option-btn"
